# rust_d3_geo_voronoi

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package.json  todo.md
.cargo/: config.toml
.github/workflows/: rust.yml
benchmark/: Cargo.toml  README.md  fast.html  index.html  index.js  package.json  tsconfig.json  webpack.config.js  webpack.production.config.js
benchmark/js/: index.js  index.ts
benchmark/src/: dom_macros.rs  lib.rs
benchmark/static/: index.html
benchmark/www/: index.html  index.js  package.json  webpack.config.js
examples/: index.js  package-lock.json  package.json
lib/: Cargo.toml
lib/benches/: draw.rs
lib/src/: extent.rs  lib.rs  math.rs
lib/src/delaunay/: cartesian.rs  circumcenters.rs  delaunay_from.rs  edges.rs  excess.rs  find.rs  generate.rs  geo_circumcenters.rs  geo_delaunay_from.rs  geo_edges.rs  geo_find.rs  geo_hull.rs  geo_mesh.rs  geo_neighbors.rs  geo_polygons.rs  geo_triangles.rs  geo_urquhart.rs  hull.rs  mesh.rs  mod.rs  neighbors.rs  o_midpoint.rs  polygons.rs  triangles.rs  urquhart.rs
lib/src/voronoi/: cell_mesh.rs  find.rs  hull.rs  links.rs  mesh.rs  mod.rs  polygons.rs  triangles.rs
lib/tests/: geo_voronoi_test.rs  voronoi.rs
profile_target/: .gitignore  Cargo.toml  perf.data  perf.data.old
profile_target/src/: main.rs
src/: data_object.rs  lib.rs  math.rs  voronoi.rs
src/delaunay/: cartesian.rs  circumcenters.rs  delaunay.rs  delaunay_from.rs  edges.rs  excess.rs  find.rs  geo_circumcenters.rs  geo_delaunay_from.rs  geo_edges.rs  geo_find.rs  geo_hull.rs  geo_mesh.rs  geo_neighbors.rs  geo_polygons.rs  geo_triangles.rs  geo_urquhart.rs  hull.rs  mesh.rs  mod.rs  neighbors.rs  o_midpoint.rs  polygons.rs  triangles.rs  urquhart.rs
src/test/: voronoi_test.rs
src/voronoi/: _vx.rs  mod.rs
test/: voronoi_test.rs
tests/: geo_voronoi_test.rs  geo_voronoi_text.rs  voronoi_test.rs
