[workspace]
members = [
  "./lib",
  "./benchmark",      # A webpage with a stress test of the library.
  "./profile_target", # A binary that output a compelex SVG images, which can be profiled.
]

[workspace.package]
authors = ["martin <martinfrances107@hotmail.com>"]
categories = ["graphics"]
edition = "2021"
keywords = ["graphics", "d3-geo-voronoi"]
license = "MIT"
readme = "../README.md"
version = "0.1.2"


[workspace.dependencies]
d3_geo_rs = "~0.1"
d3_delaunay_rs = "~0.1"
geo = "~0.23"
geo-types = "~0.7"

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true
debug = true
codegen-units = 1

[profile.dev]
debug = true

# patch over the latest release with a version that adds
# cyclic_match for test builds.
#
# Only "./lib" needs this extra functionality.
[patch.crates-io]
geo = { git = "https://github.com/martinfrances107/geo.git", branch = "cyclic_match", package = "geo" }
