[workspace]
resolver = "2"
members = [
  "./lib",
  "./benchmark",      # A webpage with a stress test of the library.
  "./profile_target", # A binary that output a compelex SVG images, which can be profiled.
]

[workspace.package]
authors = ["martin <martinfrances107@hotmail.com>"]
categories = ["graphics", "Mathematics"]
edition = "2021"
keywords = ["delauany", "diagram", "graphics", "voronoi"]
license = "MIT"
readme = "../README.md"
version = "0.8.4"

[workspace.dependencies]
d3_geo_rs = "~2"
d3_delaunay_rs = "~0.8"
geo = "~0.27"
geo-types = "~0.7"

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true
codegen-units = 1

# patch over the latest release with a version that adds
# cyclic_match for test builds.
#
# Only "./lib" needs this extra functionality.
[patch.crates-io]
geo = { git = "https://github.com/martinfrances107/geo.git", branch = "cyclic_match", package = "geo" }

[profile.bench]
debug = true
