[workspace]
resolver = "2"
members = [
  "./lib",
  "./benchmark",      # A webpage with a stress test of the library.
  "./profile_target", # A binary that output a complex SVG images, which can be profiled.
]
default-members = ['./lib']

[workspace.package]
authors = ["martin <martinfrances107@hotmail.com>"]
categories = ["graphics", "Mathematics"]
edition = "2021"
keywords = ["delaunay", "diagram", "graphics", "voronoi"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/martinfrances107/rust_d3_geo_voronoi.git"
version = "0.10.4"

[workspace.dependencies]
d3_geo_rs = "~3"
d3_delaunay_rs = "~0.11"
geo = "~0.29"
geo-types = "~0.7"

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true
codegen-units = 1

# patch over the latest release with a version that adds
# cyclic_match for test builds.
#
# Only "./lib" needs this extra functionality.
[patch.crates-io]
geo = { git = "https://github.com/martinfrances107/geo.git", branch = "cyclic_match", package = "geo" }
geo-types = { git = "https://github.com/martinfrances107/geo.git", branch = "cyclic_match", package = "geo-types" }

[profile.bench]
debug = true
