[package]
name = "benchmark"
description = "rust_d3_geo_voronoi benchmark wasm app"
license = "MIT"
version = "0.1.0"
authors = ["martin <martinfrances107@hotmail.com>"]
edition = "2021"
[lib]
crate-type = ["cdylib"]

[dependencies]
rust_d3_geo_voronoi = { path = "../lib" }
rust_d3_geo = { workspace = true, branch = "main" }
rust_d3_delaunay = { workspace = true, branch = "main" }
geo = { workspace = true }
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "~0.2"
getrandom = { version = "0.2.3", features = ["js"] }
rand = { version = "0.8.4" }
js-sys = "0.3.55"

wasm-bindgen-test = "~0.3"
wasm-bindgen-futures = "~0.4"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "~0.3"
features = [
    "Attr",
    "console",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlParagraphElement",
    "Node",
    "Performance",
    "PerformanceTiming",
    "PerformanceMeasure",
    "Text",
    "Window",
]
