[package]
authors = ["martin <martinfrances107@hotmail.com>"]
readme = "README.md"
categories = ["graphics"]
description = " benchmark for rust_d3_geo_voronoi"
edition = "2021"
keywords = ["benchmarking", "graphics", "d3-geo-voronoi"]
name = "benchmark"
license = "MIT"
repository = "https://github.com/martinfrances107/rust_d3_geo_voronoi.git"
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
d3_geo_voronoi_rs = { path = "../lib" }
d3_geo_rs = { workspace = true }
d3_delaunay_rs = { workspace = true }
geo = { workspace = true }
geo-types = { workspace = true }
getrandom = { version = "~0.2", features = ["js"] }
js-sys = "~0.3"
rand = { version = "~0.8" }
wasm-bindgen = "~0.2"
wasm-bindgen-test = "~0.3"
wasm-bindgen-futures = "~0.4"

[dependencies.web-sys]
version = "~0.3"
features = [
  "Attr",
  "console",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlParagraphElement",
  "Node",
  "Performance",
  "PerformanceTiming",
  "PerformanceMeasure",
  "Text",
  "Window",
]
