[package]
authors = ["martin <martinfrances107@hotmail.com>"]
readme = "README.md"
categories = ["graphics"]
description = " benchmark for rust_d3_geo_voronoi"
edition = "2021"
keywords = ["benchmarking", "graphics", "d3-geo-voronoi"]
name = "benchmark"
license = "MIT"
repository = "https://github.com/martinfrances107/rust_d3_geo_voronoi.git"
version = { workspace = true }

[lib]
crate-type = ["cdylib"]
test = false
bench = false

[features]
default = ["console_error_panic_hook"]

[dependencies]
d3_geo_voronoi_rs = { path = "../lib" }
d3_geo_rs = { workspace = true }
geo = { workspace = true }
geo-types = { workspace = true }
getrandom = { version = "~0.3.3", features = ["wasm_js"] }
rand = { workspace = true }
js-sys = "~0.3.77"
wasm-bindgen = "~0.2.100"
wasm-bindgen-test = "~0.3.50"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "~0.1.7", optional = true }

[dependencies.web-sys]
version = "~0.3.77"
features = [
  "Attr",
  "console",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlParagraphElement",
  "Node",
  "Performance",
  "PerformanceTiming",
  "PerformanceMeasure",
  "Text",
  "Window",
]
