[package]
readme = "./README.md"
authors = ["martin frances <martinfrances107@hotmail.com"]
categories = ["graphics"]
keywords = ["d3-geo"]
name = "rust_d3_geo_voronoi"
description = "A port into rustlang of the javascript library d3-geo-voronoi"
repository = "https://github.com/martinfrances107/rust_d3_geo_voronoi.git"
edition = "2021"
metadata = []
license = "MIT"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
approx = "0.5.0"
num-traits = "0.2.14"
derivative = "2.2.0"
float_next_after = "0.1.5"
geo = { workspace = true }
delaunator = { git = "https://github.com/mourner/delaunator-rs.git" }
rust_d3_array = { git = "https://github.com/martinfrances107/rust_d3_array.git" }
rust_d3_geo = { workspace = true, branch = "main" }
rust_d3_delaunay = { workspace = true, branch = "main" }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
measureme = "10.0.0"
pretty_assertions = "1.0.0"
wasm-bindgen-test = "0.3.13"
