[package]
authors = ["martin <martinfrances107@hotmail.com>"]
edition = "2021"
description = "Generates a SVG file for profiling."
categories = ["graphics"]
name = "profile_target"
metadata = ["profile"]
keywords = ["benchmark"]
license = "MIT"
repository = "https://github.com/martinfrances107/rust_d3_geo_voronoi.git"
version = "0.1.0"
readme = "../README.md"

[dependencies]
geo = { workspace = true }
geo-types = { workspace = true }
rust_d3_geo_voronoi = { path = "../lib" }
rust_d3_geo = { git = "https://github.com/martinfrances107/rust_d3_geo.git", branch = "main" }
rust_d3_delaunay = { git = "https://github.com/martinfrances107/rust_d3_delaunay.git", branch = "main" }

getrandom = { version = "~0.2", features = ["js"] }
rand = { version = "~0.8" }
lazy_static = "~1"
flamegraph = "~0.6"
