[package]
authors = ["martin <martinfrances107@hotmail.com>"]
edition = "2021"
description = "Generates a SVG file for profiling."
categories = ["graphics"]
name = "profile_target"
keywords = ["benchmark"]
license = "MIT"
repository = "https://github.com/martinfrances107/rust_d3_geo_voronoi.git"
version = { workspace = true }
readme = "../README.md"

[dependencies]
geo = { workspace = true }
geo-types = { workspace = true }
d3_geo_voronoi_rs = { path = "../lib" }
d3_geo_rs = { workspace = true }
d3_delaunay_rs = { workspace = true }

getrandom = { version = "~0.2", features = ["js"] }
rand = { version = "~0.8" }
lazy_static = "~1"
flamegraph = "~0.6"
