[package]
authors = ["martin <martinfrances107@hotmail.com>"]
edition = "2021"
description = "Generates a SVG file for profiling."
categories = ["graphics"]
name = "profile_target"
keywords = ["benchmark"]
license = "MIT"
repository = "https://github.com/martinfrances107/rust_d3_geo_voronoi.git"
version = { workspace = true }
readme = "../README.md"

[[bin]]
name = "profile_target"
test = false
bench = false

[dependencies]
geo = { workspace = true }
geo-types = { workspace = true }
d3_geo_voronoi_rs = { path = "../lib" }
d3_geo_rs = { workspace = true }
rand = { version = "~0.9" }
